salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/ERP_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Fatura Kalemi</label>
    <nameField><displayFormat>FK-{000000}</displayFormat><label>Fatura Kalemi No</label><type>AutoNumber</type></nameField>
    <pluralLabel>Fatura Kalemleri</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>