salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    
    <label>Ä°ndirim OranÄ±</label>
    
    <type>Percent</type>
    <precision>5</precision><scale>2</scale>
</CustomField>