salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    
    <label>Fatura</label>
    
    <type>MasterDetail</type>
    <referenceTo>ERP_Invoice__c</referenceTo><relationshipLabel>Fatura Kalemleri</relationshipLabel><relationshipName>Invoice_Lines</relationshipName><reparentableMasterDetail>false</reparentableMasterDetail><writeRequiresMasterRead>false</writeRequiresMasterRead>
</CustomField>