salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    
    <label>Net Tutar</label>
    
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>