salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    
    <label>ÃœrÃ¼n Kodu</label>
    
    <type>Text</type>
    <length>80</length>
</CustomField>