salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    
    <label>ÃœrÃ¼n / Hizmet</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>