salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    
    <label>SÄ±ra</label>
    
    <type>Number</type>
    <precision>5</precision><scale>0</scale>
</CustomField>