salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item__c</fullName>
    
    <label>Stok KartÄ±</label>
    
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint><referenceTo>ERP_Stock_Item__c</referenceTo><relationshipLabel>Fatura Kalemleri</relationshipLabel><relationshipName>Invoice_Lines</relationshipName>
</CustomField>