salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    
    <label>Birim</label>
    
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Adet</fullName><default>false</default><label>Adet</label></value><value><fullName>Kg</fullName><default>false</default><label>Kg</label></value><value><fullName>Lt</fullName><default>false</default><label>Lt</label></value><value><fullName>Metre</fullName><default>false</default><label>Metre</label></value><value><fullName>Kutu</fullName><default>false</default><label>Kutu</label></value><value><fullName>Paket</fullName><default>false</default><label>Paket</label></value><value><fullName>GÃ¼n</fullName><default>false</default><label>GÃ¼n</label></value></valueSetDefinition></valueSet>
</CustomField>