salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    
    <label>Birim Fiyat</label>
    <required>true</required>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>