salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/fields/Vat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vat_Rate__c</fullName>
    
    <label>KDV OranÄ±</label>
    
    <type>Percent</type>
    <precision>5</precision><scale>2</scale>
</CustomField>