salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice_Line__c/validationRules/Line_Amounts_Are_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Line_Amounts_Are_Valid</fullName><active>true</active>
    <errorConditionFormula>OR(Quantity__c &lt;= 0, Unit_Price__c &lt; 0, Discount_Percent__c &lt; 0, Discount_Percent__c &gt; 100)</errorConditionFormula>
    <errorMessage>Miktar pozitif, fiyat negatif olmayan ve indirim %0-%100 arasÄ±nda olmalÄ±dÄ±r.</errorMessage>
</ValidationRule>